[project]
name = "agentic-langraph-tutoriol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
]
